[gd_scene load_steps=2 format=3 uid="uid://br028ptapyhm2"]

[ext_resource type="Script" path="res://hub.gd" id="1_wlc2n"]

[node name="Hub" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wlc2n")

[node name="Multiplayer" type="Button" parent="."]
layout_mode = 0
offset_left = 518.0
offset_top = 156.0
offset_right = 615.0
offset_bottom = 187.0
text = "Multiplayer"

[node name="Gerais" type="Button" parent="."]
layout_mode = 0
offset_left = 482.0
offset_top = 232.0
offset_right = 670.0
offset_bottom = 263.0
text = "Gerais (NOT WORKING)"

[node name="League" type="Button" parent="."]
offset_left = 516.0
offset_top = 362.0
offset_right = 617.0
offset_bottom = 393.0
text = "League Solo"

[connection signal="pressed" from="Multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="Gerais" to="." method="_on_gerais_pressed"]
[connection signal="pressed" from="League" to="." method="_on_league_pressed"]
